[package]
name = "rp6lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
panic = "abort"
lto = true

[lib]
name = "rp6"
path = "src/lib.rs"

[dependencies]
avr-config = { version = "2.0.1", features = ["cpu-frequency"] }
avr-std-stub = "1.0.3"
avr_delay = { git = "https://github.com/avr-rust/delay" }
avrd = "1.0.0"
