[workspace]
members = [
    "macros",
]

[package]
name = "rp6lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "rp6"
path = "src/lib.rs"

[features]
### See `rp6::avr::interrupt::CriticalSection` for details on this feature.
unsafe-no-critical-section-count = []

[dependencies]
avr-config = { version = "2.0.1", features = ["cpu-frequency"] }
avr-std-stub = "1.0.3"
avr_delay = { git = "https://github.com/avr-rust/delay" }
avr-macros = { path = "macros" }
avrd = "1.0.0"
heapless = { version="0.7.16", features = ["ufmt-impl"] }
paste = "1.0.11"
ufmt = "0.2.0"
ufmt-write = "0.1.0"
